# mazeSolution

./: .gitignore  CMakeLists.txt  Makefile  input.txt  make.bat  test.cpp
include/algorythm/: maze.h  mazeSolver.h
include/module/: consts.h  findSolution.hpp  getCoord.h  input.h  inputOutput.hpp  makeOutput.h  mouseWork.h  output.h  sunMove.h  windowOutput.h
src/: main.cpp
src/algorythm/: maze.cpp  mazeSolver.cpp
src/module/: findSolution.txt  getCoord.cpp  input.cpp  inputOutput.cpp  makeOutput.cpp  mouseWork.cpp  output.cpp  sunMove.cpp  windowOutput.cpp
